--- a/MinimumSpanningTree/MinimumSpanningTree.csproj
+++ b/MinimumSpanningTree/MinimumSpanningTree.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="mediumEWG.txt" />
+    <None Remove="tinyEWG.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="mediumEWG.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="tinyEWG.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
